<resources>
    <string name="app_name">10119186UTS</string>
    <!-- Buttons !-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="back">BACK</string>
    <string name="start">START</string>
    <string name="getstarted">LETS GET STARTED</string>

    <!-- Slide !-->
    <string name="slide1">ME</string>
    <string name="slide2">MYSELF</string>
    <string name="slide3">AND I</string>

    <!-- Deskripsi Slide !-->
    <string name="ds1">Hallo everyone!</string>
    <string name="ds2">This is My First Apps</string>
    <string name="ds3">Welcome!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- JUDUL !-->
    <string name="home">HOME</string>
    <string name="daily">DAILY</string>
    <string name="friends">FRIENDS</string>
    <string name="media">MEDIA</string>
    <string name="music">MUSIC</string>
    <string name="video">VIDEO</string>
    <string name="profile">PROFILE</string>

    <!-- isi home !-->
    <string name="nama">Rika Nur Adila</string>
    <string name="desc">Deskripsi</string>
    <string name="isidesc">Hi! I am a third year student from Universitas Komputer Indonesia majoring in a Informatics Engineering Faculty Of Engineering and Computer Science.</string>
    <string name="interest">Interest</string>

</resources>