<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/top_background2">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/judul2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/judul"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/foto1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/img_profile_modified" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_below="@id/foto1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:background="@drawable/bg1"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/nama"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/nama"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/desc"
                android:textAlignment="center"
                android:textColor="@color/ungutua"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isidesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/desc"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg3"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/isidesc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/isidesc"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Contact"
                android:textAlignment="center"
                android:textColor="@color/ungutua"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/phone"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact"
                android:layout_alignParentStart="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/bg1"
                android:src="@drawable/ic_phone" />

            <ImageView
                android:id="@+id/email"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="83dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="159dp"
                android:layout_toEndOf="@+id/phone"
                android:background="@drawable/bg1"
                android:nextFocusRight="@id/phone"
                android:src="@drawable/ic_email" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contact"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="219dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="23dp"
                android:layout_toEndOf="@+id/phone"
                android:background="@drawable/bg1"
                android:nextFocusRight="@id/email"
                android:src="@drawable/ic_instagram" />

            <TextView
                android:id="@+id/findme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/phone"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Find Me"
                android:textAlignment="center"
                android:textColor="@color/ungutua"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logomap"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/findme"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg3"
                android:src="@drawable/ic_maps" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/logomap"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="About"
                android:textAlignment="center"
                android:textColor="@color/ungutua"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/logoabout"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg3"
                android:src="@drawable/ic_info" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>